<resources>
    <string name="app_name">Assigementlogin</string>
    <string name="create_account"><font color="#00ff00">text</font></string>
    <string name="mobile">Enter Mobile No</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="back_to_login">Back to Login</string>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="email">Email</string>
    <string name="confimpassword">Confirm Password</string>
    <string name="productcode">Enter Product Code</string>
    <string name="productname">Enter Product Name</string>
    <string name="units">Enter Product Units</string>
    <string name="mrp">Enter Product MRP</string>
    <string name="productmaster">Create Pruduct</string>
</resources>
